[package]
name = "yspace2"
version = "0.1.0"
authors = ["Andrew Archibald <andrew@aarchibald.com>"]
edition = "2021"
rust-version = "1.62"
description = "Toolchain for the Whitespace programming language"
readme = "README.md"
homepage = "https://github.com/andrewarchi/yspace2"
repository = "https://github.com/andrewarchi/yspace2"
license = "LGPL-3.0-or-later"
keywords = ["whitespace", "compiler"]
categories = ["compilers"]

[dependencies]
arrayvec = "0.7.2"
bitvec = "1.0.0"
bstr = "0.2.17"
enumset = { version = "1.0.11", features = ["std"] }
paste = "1.0.7"
strum = { version = "0.24.1", features = ["derive"] }

[profile.release]
lto = true
