[package]
name = "nebula2"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
rust-version = "1.62"
description = "Toolchain for the Whitespace programming language"
readme = "README.md"
homepage = "https://github.com/thaliaarchi/nebula2"
repository = "https://github.com/thaliaarchi/nebula2"
license = "LGPL-3.0-or-later"
keywords = ["whitespace", "compiler"]
categories = ["compilers"]

[dependencies]
arrayvec = "0.7"
bitvec = "1.0"
bstr = "1.5"
clap = { version = "4.3", features = ["deprecated", "derive", "unicode", "wrap_help"] }
compact_str = "0.7"
enumset = { version = "1.1", features = ["std"] }
paste = "1.0"
rug = { version = "1.19", default-features = false, features = ["integer", "num-traits"] }
smallvec = { version = "1.10", features = ["const_generics", "const_new", "may_dangle", "specialization", "union", "write"] }
static_assertions = "1.1"
strum = { version = "0.24", features = ["derive"] }

[profile.release]
lto = true
